--- a/src/test/resources/configfiles/locators.properties
+++ b/src/test/resources/configfiles/locators.properties
@@ -1,3 +1,9 @@
 username_loc=Email
 password_loc=Password
 login_loc=//button[text()='Log in']
+
+customersAt_4_dropDown_loc=(//li[@class='nav-item has-treeview'])[4]
+
+customers_loc=//p[text()=' Customers']
+customer_roles_loc=//p[contains(text(),' Customer roles')]
+onlineCustomers_loc=//p[contains(text(),' Online customers')]
