--- a/src/test/resources/configfiles/locators.properties
+++ b/src/test/resources/configfiles/locators.properties
@@ -7,3 +7,7 @@ customersAt_4_dropDown_loc=(//li[@class='nav-item has-treeview'])[4]
 customers_loc=//p[text()=' Customers']
 customer_roles_loc=//p[contains(text(),' Customer roles')]
 onlineCustomers_loc=//p[contains(text(),' Online customers')]
+vendors_loc=//p[contains(text(),' Vendors')]
+activityLog_loc=//p[contains(text(),' Activity log')]
+activityTypes_loc= //p[contains(text(),' Activity Types')]
+gdprRequest_loc=//p[contains(text(),' GDPR requests (log)')]
